# VELTRIX-AI

./: .env.basic  .env.example  .env.plus  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  veltrix_v9_blueprint.html
config/: config.yaml  risk.yaml  strategies.yaml
data/: circuit_breaker_state.json  fii-dii-nse-latest.csv  fii_dii_bulk.csv  fo_key_map.json  instruments_nse.csv
data/models/: ce_direction_v1_scaler_v1.pkl  ce_direction_v1_scaler_v19.pkl  ce_direction_v1_v1.pkl  ce_direction_v1_v24.pkl  direction_v1_scaler_v1.pkl  direction_v1_scaler_v40.pkl  direction_v1_v1.pkl  direction_v1_v45.pkl  pe_direction_v1_scaler_v25.pkl  pe_direction_v1_v24.pkl
data/nifty_data/: NIFTY 50-21-02-2021-to-21-02-2022.csv  NIFTY 50-21-02-2022-to-21-02-2023.csv  NIFTY 50-21-02-2024-to-21-02-2025.csv
docs/: V10_WORKFLOW.md  V8_WORKFLOW.md  V9_WORKFLOW.md  WORKFLOW.md
models/: lgbm_latest.pkl  options_direction_model.pkl  options_direction_scaler.pkl  scaler_latest.pkl
scripts/: auth_upstox.py  backup_gdrive.sh  robustness_test.py
src/: main.py
src/auth/: token_manager.py
src/backtest/: engine.py  metrics.py  optimizer.py
tests/: test_backtest.py  test_bucket_grouping.py  test_critical_stability.py  test_exit_strategy.py  test_expiry_type.py  test_fetcher.py  test_high_stability.py  test_instrument_logger.py  test_iron_condor.py  test_iv_filter.py  test_ml_features.py  test_ml_integration.py  test_ml_training.py  test_oi_change_filter.py  test_plus.py  test_risk.py  test_signal_fixes.py  test_strategies.py  test_upstox.py
(+32 files in other folders)
