[project]
name = "veltrix"
version = "0.8.0"
description = "AI Trading Bot for Indian stocks (NSE) using Upstox API V3"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
